@@ -1,0 +1,6 @@
+##
+## puppet.internal.genfic.com
+##
+node 'puppet.internal.genfic.com' inherits basenode {
+  include general
+}
