@@ -1,0 +1,6 @@
+##
+## test.internal.genfic.com
+##
+node 'test.internal.genfic.com' inherits basenode {
+  include general
+}
