@@ -1,0 +1,9 @@
+class general {
+  ################################
+  #
+  # General setup
+  #
+
+  # Start with minimal
+  include minimal
+}
