@@ -1,0 +1,9 @@
+class minimal {
+  ###############################
+  #
+  # Minimal setup
+  #
+
+  # Manage /etc/hosts
+  include hosts
+}
